--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "سورس ميوزك تايلر",
     "description": "سورس ميوزك تايلر 2021",
-    "logo": "https://telegra.ph/file/b0b13433b8595ed385f07.jpg",
+    "logo": "https://t.me/D03DD/33",
     "keywords": [
         "Telegram",
         "MusicPlayer",
